Fixes whitespace showing on the right for mobile devices Fixes share buttons stacking on mobile Fixes twitter follow button brom breaking out of the container on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -248,6 +248,7 @@ div.comm-body {
   padding-top:40px;
   padding-bottom:80px;
   .header {
+
     position:relative;
     text-align:center;
     padding-top: 40px;
@@ -258,7 +259,6 @@ div.comm-body {
       display: inline;
       position:relative;
       bottom: 10px;
-      left: 40px;
     }
   }
   h2,h3,h4,h1 {
